--- a/Snowflake.Data/Snowflake.Data.csproj
+++ b/Snowflake.Data/Snowflake.Data.csproj
@@ -12,9 +12,11 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.90" />
     <PackageReference Include="MySql.Data" Version="8.0.25" />
+    <PackageReference Include="CSRedisCore" Version="3.6.6" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Schemes\identity.struct.sql" />
+    <None Remove="CSRedisCore" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Scripts\" />
