--- a/Snowflake.Data/Snowflake.Data.csproj
+++ b/Snowflake.Data/Snowflake.Data.csproj
@@ -11,15 +11,20 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.90" />
-    <PackageReference Include="MySql.Data" Version="8.0.25" />
     <PackageReference Include="CSRedisCore" Version="3.6.6" />
+    <PackageReference Include="MySqlConnector" Version="1.3.10" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Schemes\identity.struct.sql" />
     <None Remove="CSRedisCore" />
+    <None Remove="MySqlConnector" />
+    <None Remove="Implements\" />
+    <None Remove="Interfaces\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Scripts\" />
+    <Folder Include="Implements\" />
+    <Folder Include="Interfaces\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Snowflake.Core\Snowflake.Core.csproj" />
