--- a/Snowflake.Identity/Snowflake.Identity.csproj
+++ b/Snowflake.Identity/Snowflake.Identity.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <Optimize>true</Optimize>
+    <Optimize>false</Optimize>
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>bin\Debug\net5.0\Snowflake.Identity.xml</DocumentationFile>
   </PropertyGroup>
